[package]
name = "metario"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.24"
egui = "0.24"
egui_glow = "0.24"
egui_extras = "0.24"
kiss3d = "0.35"  # Simple 3D graphics library
nalgebra = "0.32" # Math library for 3D

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

